# cgi_projects

./: .gitignore  readme.md
Setup01/: main.cpp
Setup02/: HelloMe.cpp
basic_vs_build/src/: main.cpp
bro_code/01_random_eventGen/: random_eventGen.cpp
bro_code/01_random_num/: random_num.cpp  readme.md
bro_code/02_num_guess/: note.md  num_guess.cpp
bro_code/03_banking_program/: banking_program.cpp
bro_code/04_arrays/: arrays_exp.cpp  readme.md
cmake_tests/test01/: CMakeLists.txt  main.cpp
cmake_tests/test02/: Account.cpp  Account.h  CMakeLists.txt  main.cpp
cmake_tests/test03/: CMakeLists.txt
cmake_tests/test04/: CMakeLists.txt  MechRover.cpp  MechRover.h  main.cpp
code_detection/: CMakeLists.txt  main.cpp
setup_03/: variable-type.cpp
setup_04cm/: CMakeLists.txt  main.cpp
vulkan_setup01/: main.cpp
vulkan_setup02/: CMakeLists.txt
vulkan_setup02/src/: main.cpp
